# BidChain

./: .env.example  .gitignore  .npmrc  Cargo.toml  Makefile  README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  contracts.yml
contracts/auction/: Cargo.toml
contracts/auction/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/auction/test_snapshots/test/: test_anti_snipe_extension.1.json  test_bid_below_starting_price_rejected.1.json  test_bid_must_increase.1.json  test_create_and_bid_flow.1.json  test_invalid_create_auction_params.1.json  test_list_auctions.1.json  test_reputation_updates.1.json  test_seller_cannot_bid_on_own_auction.1.json  test_settle_before_end_rejected.1.json  (+2 more)
docs/: CONTRACT.md
scripts/: bind.ts  build.sh  deploy.sh  deploy.ts  init.sh
src/app/: layout.tsx  page.tsx
src/app/api/auctions/: route.ts
src/app/auctions/: page.tsx
src/app/create/: page.tsx
src/app/profile/: page.tsx
src/components/: AuctionCard.tsx  AuctionDetail.tsx  BidPanel.tsx  Countdown.tsx  CreateAuctionForm.tsx  EventFeed.tsx  LiveAuctions.tsx  LiveEvents.tsx  Profile.tsx  WalletButton.tsx
src/components/system/: ErrorBoundary.tsx  TxToasts.tsx
src/hooks/: useAuctions.ts  useLiveEvents.ts  useTransaction.ts  useWallet.ts
src/lib/: config.ts  tokens.ts
src/lib/contract/: bindings.ts  client.ts  errors.ts  index.ts  submit.ts
src/lib/events/: index.ts  stream.ts  types.ts
src/lib/wallet/: kit.ts
src/styles/: globals.css
(+2 files in other folders)
