[workspace]
resolver = "2"
members = ["contracts/auction"]
# Ignore any non-Rust artifacts that may end up in subfolders
# (Next.js `.next`, etc.) so they never break the workspace.
exclude = [
  "contracts/.next",
  "node_modules",
  ".next",
  "src",
  "scripts",
  "deployments",
  "abi",
]

[workspace.dependencies]
soroban-sdk = "25"
stellar-sdk = "15"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
